Bug 65735 : Edit properties window is distorted for folders which are shared.
Review : https://reviewboard.eng.vmware.com/r/272000/

http://bugzilla.zimbra.com/show_bug.cgi?id=65735

Copied from Perforce
 Change: 334421

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -5066,9 +5066,13 @@ border: 1px solid #666;
 .ZmFolderPropertiesDialog-container {
 	overflow: hidden;
 	width: 500px;
-	height: 210px;
 }
 
 .ZmFolderPropertyView {
 	margin-top:10px;
+}
+
+.ZmFolderPropSharing {
+    position: relative;
+    bottom: 10px;
 }
